# ansible-docsmith

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  REUSE.toml  pyproject.toml
ansibledocsmith/: pyproject.toml
ansibledocsmith/LICENSES/: GPL-3.0-or-later.txt
ansibledocsmith/scripts/: release-check.sh
ansibledocsmith/src/ansible_docsmith/: __init__.py  cli.py  constants.py
ansibledocsmith/src/ansible_docsmith/core/: __init__.py  collection.py  defaults_comments.py  doc_generators.py  exceptions.py  generator.py  markup.py  parser.py  processor.py  readme_updater.py  text.py  toc.py
ansibledocsmith/src/ansible_docsmith/templates/: __init__.py
ansibledocsmith/src/ansible_docsmith/templates/readme/: __init__.py  default.md.j2  default.rst.j2
ansibledocsmith/src/ansible_docsmith/utils/: __init__.py  logging.py
ansibledocsmith/tests/: __init__.py  conftest.py
ansibledocsmith/tests/fixtures/: defaults_main.yml
ansibledocsmith/tests/fixtures/example-collection/: README.md
ansibledocsmith/tests/fixtures/example-collection/roles/second/defaults/: main.yml
ansibledocsmith/tests/fixtures/example-collection/roles/second/meta/: argument_specs.yml
ansibledocsmith/tests/fixtures/example-role/: README.md
ansibledocsmith/tests/fixtures/example-role-ansible-markup/: README.md
ansibledocsmith/tests/fixtures/example-role-ansible-markup/meta/: argument_specs.yml
ansibledocsmith/tests/fixtures/example-role-mismatch-spec-defaults/: README.md
ansibledocsmith/tests/fixtures/example-role-mismatch-spec-defaults/defaults/: configure.yml  install.yml  main.yml
ansibledocsmith/tests/fixtures/example-role-mismatch-spec-defaults/meta/: argument_specs.yml
ansibledocsmith/tests/fixtures/example-role-mixed-entry-points/: README.md
ansibledocsmith/tests/fixtures/example-role-mixed-entry-points/defaults/: install.yml  main.yml
ansibledocsmith/tests/fixtures/example-role-multiple-entry-points/: README.md
ansibledocsmith/tests/fixtures/example-role-multiple-entry-points/defaults/: configure.yml  install.yml
ansibledocsmith/tests/fixtures/example-role-multiple-entry-points/meta/: argument_specs.yml
ansibledocsmith/tests/fixtures/example-role-mutually-exclusive-keys/meta/: argument_specs.yml
ansibledocsmith/tests/fixtures/example-role-nested-options/: README.md
ansibledocsmith/tests/fixtures/example-role-nested-options/meta/: argument_specs.yml
ansibledocsmith/tests/fixtures/example-role-simple/: README.md
ansibledocsmith/tests/fixtures/example-role-simple-rst/: README.rst
ansibledocsmith/tests/fixtures/example-role-simple-rst/meta/: argument_specs.yml
ansibledocsmith/tests/fixtures/example-role-simple-toc/: README.md
ansibledocsmith/tests/fixtures/example-role-simple-toc-rst/: README.rst
ansibledocsmith/tests/fixtures/example-role-simple-toc-rst-fallback/: README.rst
ansibledocsmith/tests/fixtures/example-role-simple/defaults/: main.yml
ansibledocsmith/tests/fixtures/example-role-simple/meta/: argument_specs.yml
ansibledocsmith/tests/fixtures/example-role/meta/: argument_specs.yml
ansibledocsmith/tests/integration/: test_end_to_end.py
ansibledocsmith/tests/unit/: markdown_pipeline_golden.json  test_cli.py  test_collection.py  test_generator.py  test_markdown_pipeline_golden.py  test_markup.py  test_parser.py  test_processor.py  test_templates.py
src/ansible_docsmith/core/: __init__.py  defaults_comments.py  markdown_ast.py  markup.py  parser.py  toc.py
src/ansible_docsmith/templates/: __init__.py
src/ansible_docsmith/templates/readme/: default.md.j2
src/ansible_docsmith/utils/: logging.py
tests/: conftest.py
tests/fixtures/example-collection/: galaxy.yml
tests/fixtures/example-collection/roles/first/: README.md
tests/fixtures/example-collection/roles/first/defaults/: main.yml
tests/fixtures/example-collection/roles/first/meta/: argument_specs.yml
tests/fixtures/example-collection/roles/second/: README.md
tests/fixtures/example-role-ansible-markup/defaults/: main.yml
tests/fixtures/example-role-mismatch-spec-defaults/: README.md
tests/fixtures/example-role-mismatch-spec-defaults/defaults/: configure.yml  main.yml
tests/fixtures/example-role-mismatch-spec-defaults/meta/: argument_specs.yml
tests/fixtures/example-role-missing-readme-markers/: README.md
tests/fixtures/example-role-missing-readme-markers/defaults/: main.yml
tests/fixtures/example-role-missing-readme-markers/meta/: argument_specs.yml
tests/fixtures/example-role-mixed-entry-points/meta/: argument_specs.yml
tests/fixtures/example-role-multiple-entry-points/defaults/: install.yml
tests/fixtures/example-role-mutually-exclusive-keys/: README.md
tests/fixtures/example-role-nested-options/defaults/: main.yml
tests/fixtures/example-role-simple-toc/: README.md
tests/fixtures/example-role-simple-toc-rst-fallback/: README.rst
tests/unit/: test_collection.py  test_generator.py  test_markdown_pipeline_golden.py  test_templates.py
