# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "ansible-docsmith"
version = "2.1.0"
description = "DocSmith for Ansible: automating role documentation (using argument_specs.yml)"
keywords = ["ansible", "documentation", "yaml", "cli", "automation"]
license = "GPL-3.0-or-later"
license-files = ["LICENSES/*.txt"]
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  { name = "foundata GmbH" },
  { name = "Andreas Haerter", email = "ah@foundata.com" },
]
maintainers = [
  { name = "Andreas Haerter", email = "ah@foundata.com" },
]
requires-python = ">=3.11"
dependencies = [
    "antsibull-docs-parser>=1.2.0,<2.0.0",
    "jinja2>=3.1.6",
    "markdown-it-py>=3.0.0",
    "rich>=14.1.0",
    "ruamel-yaml>=0.18.14",
    "typer>=0.16.0",
    "typing-extensions>=4.4",  # `override` backport for Python 3.11.
]

# https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 5 - Production/Stable",

  # Indication for whom the project is for
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",

  # Supported Python versions
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
ansible-docsmith = "ansible_docsmith.cli:app"

[project.urls]
Homepage = "https://foundata.com/en/projects/ansible-docsmith/"
Documentation = "https://foundata.com/en/projects/ansible-docsmith/#doc"
Repository = "https://foundata.com/en/projects/ansible-docsmith/#source"
Issues = "https://foundata.com/en/projects/ansible-docsmith/#issues"
Changelog = "https://foundata.com/en/projects/ansible-docsmith/#changelog"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=9.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.7",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/settings/#lint_select
select = [
    "E4",  # pycodestyle import errors
    "E7",  # pycodestyle statement errors
    "E9",  # pycodestyle runtime errors
    "F",   # Pyflakes
    "I",   # import sorting
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = [
    # TODO: Replace with explicit `raise ... from` in the error-handling pass.
    "B904",  # raise without `from` in except clauses.
]

[tool.ruff.lint.per-file-ignores]
"src/ansible_docsmith/cli.py" = [
    "B008",    # Typer relies on function calls in argument defaults.
    "RUF001",  # Deliberate "ℹ" glyph in user-facing CLI output.
]
"tests/**/*.py" = [
    "B017",    # Tests deliberately assert on Exception.
    "RUF059",  # Tests unpack result tuples and assert on a subset.
]

[tool.mypy]
python_version = "3.11"
strict = true
enable_error_code = ["explicit-override"]  # Extends strict mode.
warn_unreachable = true                     # Extends strict mode.

# Migration ratchet: strict typing is being introduced module by module.
# Each follow-up commit removes one entry below and fixes its diagnostics.
[[tool.mypy.overrides]]
module = [
    "ansible_docsmith.core.processor",
]
ignore_errors = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = ["error"]
strict = true
testpaths = ["tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 88
